# Planting-Optimisation-Tool

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  contrib.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: backend-ci.yml  node.js.yml  python-app.yml
backend/: .env.example  .pre-commit-config.yaml  ERD.md  README.md  README_authentication.md  SCHEMA.md  justfile  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/versions/: 2026_01_09_0004-added_parameters_table_per_dwstephens-5113e544bbcc.py  2026_01_09_0034-added_recommendations_table-47d1e9a4d7ff.py  2026_01_11_2324-added_exclusions_to_recommendations_-6695817e32fc.py  2026_01_13_1037-added_score_method_to_parameters_table-2dbb4eeaac05.py  2026_01_20_1123-removed_exclusions_from_recommandations-2d6b73857113.py  2026_01_24_1630-m_add_auditlog_table_and_update_user_-0ab2f52b43df.py  2026_01_24_2108-add_auditlog_table-8af9fea9a13c.py  2026_01_24_2109-add_auditlog_table-3e6188f53510.py  2026_01_29_1602-updating_audit_log_to_sqlalchemy_2_0_-769fc9c97e25.py
backend/src/: database.py  dependencies.py  main.py
backend/src/domains/: authentication.py  environmental_profile.py  reporting.py  sapling_estimation.py  suitability_scoring.py  survivability.py  tree_growth.py
backend/src/models/: __init__.py  agroforestry_type.py  association.py  audit_log.py  boundaries.py  farm.py  parameters.py  recommendations.py  soil_texture.py  species.py  user.py
backend/src/routers/: auth.py  environmental_profile.py  farm.py  recommendation.py  sapling_estimation.py  soil_texture.py  species.py  user.py
backend/src/schemas/: constants.py  environmental_profile.py  farm.py  nested_models.py  parameters.py  sapling_estimation.py  user.py
backend/src/scripts/: create_test_user.py  import_species_parameters.py  replicate_db.py  setup_import_db.py
backend/src/services/: authentication.py  environmental_profile.py  farm.py  recommendation.py  sapling_estimation.py  species.py  species_parameters.py
backend/tests/: conftest.py  test_audit_logging.py  test_audit_logs.py  test_auth.py  test_farm_router.py  test_ingestion_integrity.py  test_roles.py  test_validation.py
datascience/: README.md  pyproject.toml
datascience/config/: recommend.yaml
datascience/data/: species.csv  species_params.csv
datascience/docs/: Data-Dictionary-PO-Datasets.md
datascience/gis/config/: settings.py
datascience/gis/core/: extract_data.py  farm_profile.py  gee_client.py  geometry_parser.py
datascience/gis/docs/: README.md
datascience/src/: recommend_app.py
datascience/src/exclusion_rules/: exclusion_core_logic.py
datascience/src/scripts/: generate_soil_texture_compatibility_yaml.py
datascience/src/suitability_scoring/: recommend.py  repository.py
datascience/src/suitability_scoring/scoring/: scoring.py
datascience/src/suitability_scoring/utils/: params.py
datascience/suitability_scoring/docs/: architecture_figure.qmd  data_dictionary.md  future_ideas.md  output_schema.md  scoring_design.md
datascience/tests/: test_exclusion_rules_scenarios.py  test_ss_categorical_exact.py  test_ss_recommend.py  test_ss_score.py  test_ss_trapezoid.py  test_ss_utils.py
frontend/: .gitignore  .stylelintrc  README.md  calculator.html  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  profile.html  recommendation.html  species.html
frontend/src/: authTest.ts  home.css  home.ts  index.ts  species.ts  style.css  sum.ts
frontend/src/utils/: contentfulClient.ts
frontend/test/: home.test.ts  species.test.ts
gis/: pyproject.toml
gis/config/: settings.py
gis/core/: extract_data.py  farm_profile.py
gis/docs/: README.md  output_schema.md
gis/notebook/: all_farm_environmental_factors.csv  extract_environmental_factor_each_farm.ipynb  valid_check_environmental_factor_each_farm.ipynb
gis/sapling_estimation/: estimate.py  planting_points.py  rotation.py  slope_raster.py  slope_rules.py
gis/sapling_estimation/docs/: README.md  feature_summary.md  output_schema.md
gis/tests/: test_gis.py  test_planting_points.py  test_rotation.py  test_slope_raster.py  test_slope_rules.py
